[package]
name = "atm"
version = "0.1.0"
edition = "2024"
authors = ["Raine"]
description = "Local-first task manager CLI and sync server"
license = "MIT"

[dependencies]
axum = "0.8"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio",
  "sqlite",
  "macros",
  "migrate",
  "json",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
tokio = { version = "1.45", features = ["full"] }

[dev-dependencies]
tempfile = "3.14"
assert_cmd = "2"
