[package]
name = "atm"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
authors = ["Raine"]
description = "Local-first task manager CLI and sync server"
license = "MIT"

[dependencies]
axum = "0.8"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
getrandom = "0.3"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
sqlx = { version = "0.9", default-features = false, features = [
  "runtime-tokio",
  "sqlite",
  "macros",
  "migrate",
  "json",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1"
anyhow = "1.0"
crossterm = "0.29"
ratatui = "0.30"
tokio = { version = "1.45", features = ["macros", "rt-multi-thread", "signal", "net", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.14"
assert_cmd = "2"
